[package]
name = "irmaseal-wasm-bindings"
version = "0.0.5"
authors = ["Bas Westerbaan <bas@westerbaan.name>", "Leon Botros <l.botros@cs.ru.nl>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
irmaseal-core = { git = "https://github.com/encryption4all/irmaseal", branch = "simplify-core" }
wasm-bindgen = "0.2.73"
js-sys = "0.3.50"
rand = { version = "0.8.3", features = ["wasm-bindgen"] }
serde_json = "1.0.64"

# TODO Temporarily force ibe 0.1.4 to get quicker parameter deserialization,
#      until irmaseal-core bumps the version of ibe it uses.
ibe = "0.1.4"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]

[profile.release]
lto = true
opt-level = "s"
