[package]
name = "irmaseal-wasm-bindings"
version = "0.0.5"
authors = ["Bas Westerbaan <bas@westerbaan.name>", "Leon Botros <l.botros@cs.ru.nl>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
irmaseal-core = { git = "https://github.com/encryption4all/irmaseal" }
wasm-bindgen = "0.2.73"
js-sys = "0.3.50"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
serde_json = "1.0.64"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]

[profile.release]
lto = true
opt-level = "s"
